// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Eagle exporter snapshot tests > generateEagleBoard matches snapshot 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE eagle SYSTEM "eagle.dtd">
<eagle version="9.6.2">
  <drawing>
    <layers>
      <layer number="1" name="Top" color="4" fill="1" visible="yes" active="yes"/>
      <layer number="16" name="Bottom" color="1" fill="1" visible="yes" active="yes"/>
      <layer number="20" name="Dimension" color="15" fill="1" visible="yes" active="yes"/>
      <layer number="21" name="tPlace" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="22" name="bPlace" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="25" name="tNames" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="26" name="bNames" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="27" name="tValues" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="29" name="tStop" color="7" fill="3" visible="no" active="yes"/>
      <layer number="31" name="tCream" color="7" fill="4" visible="no" active="yes"/>
    </layers>
    <board>
      <plain>
        <wire x1="0" y1="0" x2="50" y2="0" width="0.1" layer="20"/>
        <wire x1="50" y1="0" x2="50" y2="40" width="0.1" layer="20"/>
        <wire x1="50" y1="40" x2="0" y2="40" width="0.1" layer="20"/>
        <wire x1="0" y1="40" x2="0" y2="0" width="0.1" layer="20"/>
      </plain>
      <libraries>
        <library name="protopulse">
          <packages>
          <package name="TO-220">
            <wire x1="-1.905" y1="-1.2000000000000002" x2="1.905" y2="-1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="1.905" y1="-1.2000000000000002" x2="1.905" y2="1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="1.905" y1="1.2000000000000002" x2="-1.905" y2="1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="-1.905" y1="1.2000000000000002" x2="-1.905" y2="-1.2000000000000002" width="0.127" layer="21"/>
            <text x="0" y="1.7000000000000002" size="0.8" layer="25" align="bottom-center">&gt;NAME</text>
            <text x="0" y="-1.7000000000000002" size="0.8" layer="27" align="top-center">&gt;VALUE</text>
            <pad name="IN" x="-0.953" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <pad name="GND" x="0.000" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <pad name="OUT" x="0.952" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <circle x="-1.405" y="0.7000000000000002" radius="0.2" width="0.127" layer="21"/>
          </package>
          </packages>
        </library>
      </libraries>
      <elements>
        <element name="U1" library="protopulse" package="TO-220" value="5V" x="20.000" y="15.000" rot="R90"/>
      </elements>
      <signals>
        <signal name="VIN">
          <wire x1="5.000" y1="5.000" x2="20.000" y2="15.000" width="0.3" layer="1"/>
        </signal>
      </signals>
    </board>
  </drawing>
</eagle>"
`;

exports[`Eagle exporter snapshot tests > generateEagleSchematic matches snapshot 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE eagle SYSTEM "eagle.dtd">
<eagle version="9.6.2">
  <drawing>
    <settings>
      <setting alwaysvectorfont="no"/>
    </settings>
    <grid distance="2.54" unitdist="mm" unit="mm" display="no"/>
    <layers>
      <layer number="91" name="Nets" color="2" fill="1" visible="yes" active="yes"/>
      <layer number="92" name="Busses" color="1" fill="1" visible="yes" active="yes"/>
      <layer number="93" name="Pins" color="2" fill="1" visible="no" active="yes"/>
      <layer number="94" name="Symbols" color="4" fill="1" visible="yes" active="yes"/>
      <layer number="95" name="Names" color="7" fill="1" visible="yes" active="yes"/>
      <layer number="96" name="Values" color="7" fill="1" visible="yes" active="yes"/>
    </layers>
    <schematic>
      <libraries>
        <library name="protopulse">
          <packages>
          <package name="TO-220">
            <wire x1="-1.905" y1="-1.2000000000000002" x2="1.905" y2="-1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="1.905" y1="-1.2000000000000002" x2="1.905" y2="1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="1.905" y1="1.2000000000000002" x2="-1.905" y2="1.2000000000000002" width="0.127" layer="21"/>
            <wire x1="-1.905" y1="1.2000000000000002" x2="-1.905" y2="-1.2000000000000002" width="0.127" layer="21"/>
            <text x="0" y="1.7000000000000002" size="0.8" layer="25" align="bottom-center">&gt;NAME</text>
            <text x="0" y="-1.7000000000000002" size="0.8" layer="27" align="top-center">&gt;VALUE</text>
            <pad name="IN" x="-0.953" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <pad name="GND" x="0.000" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <pad name="OUT" x="0.952" y="0" drill="0.8" diameter="1.524" shape="round"/>
            <circle x="-1.405" y="0.7000000000000002" radius="0.2" width="0.127" layer="21"/>
          </package>
          </packages>
          <symbols>
          <symbol name="SYM_LM7805">
            <wire x1="-5.08" y1="-2.54" x2="5.08" y2="-2.54" width="0.254" layer="94"/>
            <wire x1="5.08" y1="-2.54" x2="5.08" y2="2.54" width="0.254" layer="94"/>
            <wire x1="5.08" y1="2.54" x2="-5.08" y2="2.54" width="0.254" layer="94"/>
            <wire x1="-5.08" y1="2.54" x2="-5.08" y2="-2.54" width="0.254" layer="94"/>
            <text x="0" y="3.81" size="1.27" layer="95" align="bottom-center">&gt;NAME</text>
            <text x="0" y="-3.81" size="1.27" layer="96" align="top-center">&gt;VALUE</text>
            <wire x1="-5.08" y1="1.27" x2="-7.62" y2="1.27" width="0.254" layer="94"/>
            <pin name="IN" x="-10.16" y="1.27" length="short"/>
            <wire x1="-5.08" y1="-1.27" x2="-7.62" y2="-1.27" width="0.254" layer="94"/>
            <pin name="OUT" x="-10.16" y="-1.27" length="short"/>
            <wire x1="5.08" y1="1.27" x2="7.62" y2="1.27" width="0.254" layer="94"/>
            <pin name="GND" x="10.16" y="1.27" length="short" rot="R180"/>
          </symbol>
          </symbols>
          <devicesets>
          <deviceset name="LM7805" prefix="U">
            <gates>
              <gate name="G$1" symbol="SYM_LM7805" x="0" y="0"/>
            </gates>
            <devices>
              <device name="" package="TO-220">
                <connects>
                  <connect gate="G$1" pin="IN" pad="IN"/>
                  <connect gate="G$1" pin="GND" pad="GND"/>
                  <connect gate="G$1" pin="OUT" pad="OUT"/>
                </connects>
              </device>
            </devices>
          </deviceset>
          </devicesets>
        </library>
      </libraries>
      <parts>
        <part name="U1" library="protopulse" deviceset="LM7805" device="" value="5V"/>
      </parts>
      <sheets>
        <sheet>
          <instances>
            <instance part="U1" gate="G$1" x="15.00" y="10.00"/>
          </instances>
          <nets>
            <net name="VIN" class="0">
              <segment>
                <pinref part="U1" gate="G$1" pin="IN"/>
                <pinref part="U1" gate="G$1" pin="IN"/>
              </segment>
            </net>
          </nets>
        </sheet>
      </sheets>
    </schematic>
  </drawing>
</eagle>"
`;

exports[`Gerber snapshot tests > generateBoardOutline — custom polygon matches snapshot 1`] = `
"G04 ProtoPulse EDA - Board Outline*
%FSLAX36Y36*%
%MOMM*%
%TF.GenerationSoftware,ProtoPulse,EDA,1.0*%
%TF.FileFunction,Profile,NP*%
%TF.FilePolarity,Positive*%
%ADD10C,0.100*%
G01*
D10*
X0Y0D02*
X50000000Y0D01*
X50000000Y30000000D01*
X25000000Y40000000D01*
X0Y30000000D01*
X0Y0D01*
M02*"
`;

exports[`Gerber snapshot tests > generateBoardOutline — rectangular outline matches snapshot 1`] = `
"G04 ProtoPulse EDA - Board Outline*
%FSLAX36Y36*%
%MOMM*%
%TF.GenerationSoftware,ProtoPulse,EDA,1.0*%
%TF.FileFunction,Profile,NP*%
%TF.FilePolarity,Positive*%
%ADD10C,0.100*%
G01*
D10*
X0Y0D02*
X50000000Y0D01*
X50000000Y40000000D01*
X0Y40000000D01*
X0Y0D01*
M02*"
`;

exports[`Gerber snapshot tests > generateCopperLayer — back copper matches snapshot 1`] = `
"G04 ProtoPulse EDA - Back Copper*
%FSLAX36Y36*%
%MOMM*%
%TF.GenerationSoftware,ProtoPulse,EDA,1.0*%
%TF.FileFunction,Copper,L2,Bot*%
%TF.FilePolarity,Positive*%
%ADD10R,1.600X1.600*%
%ADD11C,1.600*%
G01*
D10*
X22000000Y25000000D03*
D11*
X28000000Y25000000D03*
M02*"
`;

exports[`Gerber snapshot tests > generateCopperLayer — front copper matches snapshot 1`] = `
"G04 ProtoPulse EDA - Front Copper*
%FSLAX36Y36*%
%MOMM*%
%TF.GenerationSoftware,ProtoPulse,EDA,1.0*%
%TF.FileFunction,Copper,L1,Top*%
%TF.FilePolarity,Positive*%
%ADD10C,0.250*%
%ADD11R,1.600X1.600*%
%ADD12C,1.600*%
G01*
D10*
X10000000Y10000000D02*
X20000000Y10000000D01*
X20000000Y20000000D01*
D11*
X22000000Y25000000D03*
D12*
X28000000Y25000000D03*
M02*"
`;

exports[`Gerber snapshot tests > generateGerber — drill file for SMD-only board matches snapshot 1`] = `
"M48
FMAT,2
METRIC,TZ
%
M30"
`;

exports[`Gerber snapshot tests > generateGerber — drill file for THT components matches snapshot 1`] = `
"M48
FMAT,2
METRIC,TZ
T1C0.800
%
T1
X22000Y25000
X28000Y25000
M30"
`;

exports[`Gerber snapshot tests > generateGerber — full output structure matches snapshot 1`] = `
[
  {
    "name": "F.Cu",
    "side": "front",
    "type": "copper",
  },
  {
    "name": "B.Cu",
    "side": "back",
    "type": "copper",
  },
  {
    "name": "F.SilkS",
    "side": "front",
    "type": "silkscreen",
  },
  {
    "name": "B.SilkS",
    "side": "back",
    "type": "silkscreen",
  },
  {
    "name": "F.Mask",
    "side": "front",
    "type": "soldermask",
  },
  {
    "name": "B.Mask",
    "side": "back",
    "type": "soldermask",
  },
  {
    "name": "F.Paste",
    "side": "front",
    "type": "paste",
  },
  {
    "name": "B.Paste",
    "side": "back",
    "type": "paste",
  },
  {
    "name": "Edge.Cuts",
    "side": "front",
    "type": "outline",
  },
]
`;

exports[`KiCad exporter snapshot tests > generateKicadPcb matches snapshot 1`] = `
"(kicad_pcb (version 20221018) (generator "ProtoPulse")

  (general
    (thickness 1.6)
  )

  (layers
    (0 "F.Cu" signal)
    (31 "B.Cu" signal)
    (32 "B.Adhes" user "B.Adhesive")
    (33 "F.Adhes" user "F.Adhesive")
    (34 "B.Paste" user)
    (35 "F.Paste" user)
    (36 "B.SilkS" user "B.Silkscreen")
    (37 "F.SilkS" user "F.Silkscreen")
    (38 "B.Mask" user)
    (39 "F.Mask" user)
    (40 "Dwgs.User" user "User.Drawings")
    (41 "Cmts.User" user "User.Comments")
    (42 "Eco1.User" user "User.Eco1")
    (43 "Eco2.User" user "User.Eco2")
    (44 "Edge.Cuts" user)
    (45 "Margin" user)
    (46 "B.CrtYd" user "B.Courtyard")
    (47 "F.CrtYd" user "F.Courtyard")
    (48 "B.Fab" user)
    (49 "F.Fab" user)
  )

  (setup
    (stackup
      (layer "F.SilkS" (type "Top Silk Screen"))
      (layer "F.Paste" (type "Top Solder Paste"))
      (layer "F.Mask" (type "Top Solder Mask") (thickness 0.01))
      (layer "F.Cu" (type "copper") (thickness 0.035))
      (layer "dielectric 1" (type "core") (thickness 1.51) (material "FR4") (epsilon_r 4.5) (loss_tangent 0.02))
      (layer "B.Cu" (type "copper") (thickness 0.035))
      (layer "B.Mask" (type "Bottom Solder Mask") (thickness 0.01))
      (layer "B.Paste" (type "Bottom Solder Paste"))
      (layer "B.SilkS" (type "Bottom Silk Screen"))
    )
    (pad_to_mask_clearance 0.051)
    (pcbplotparams
      (layerselection 0x00010fc_ffffffff)
      (outputformat 1)
      (mirror false)
      (drillshape 1)
      (scaleselection 1)
      (outputdirectory "")
    )
  )

  (net 0 "")
  (net 1 "VCC")

  (footprint "PP:DIP_28_1" (layer "F.Cu") (at 25 30 0)
    (uuid "ba6264e4-8481-9c0c-b650-e1fc0426fa0c")
    (fp_text reference "U1" (at 0 -3) (layer "F.SilkS")
      (effects (font (size 1 1) (thickness 0.15)))
    )
    (fp_text value "ATmega328P" (at 0 3) (layer "F.SilkS")
      (effects (font (size 1 1) (thickness 0.15)))
    )
    (fp_rect (start -2.5 -3.04) (end 2.5 3.04) (stroke (width 0.05) (type default)) (fill none) (layer "F.CrtYd"))
    (fp_rect (start -2 -2.54) (end 2 2.54) (stroke (width 0.1) (type default)) (fill none) (layer "F.Fab"))
    (pad "pin1" thru_hole rect (at -1.5 -2.04) (size 1.6 1.6) (drill 0.8) (layers "*.Cu" "*.Mask"))
    (pad "pin2" thru_hole circle (at -1.5 0.5) (size 1.6 1.6) (drill 0.8) (layers "*.Cu" "*.Mask") (net 1 "VCC"))
    (pad "pin3" thru_hole circle (at 1.5 2.04) (size 1.6 1.6) (drill 0.8) (layers "*.Cu" "*.Mask"))
  )

  (segment (start 10 10) (end 25 30) (width 0.25) (layer "F.Cu") (net 1) (uuid "391137f8-8481-9c0c-b650-e1fc0426fa0c"))

  (gr_line (start 0 0) (end 60 0) (stroke (width 0.1) (type default)) (layer "Edge.Cuts"))
  (gr_line (start 60 0) (end 60 50) (stroke (width 0.1) (type default)) (layer "Edge.Cuts"))
  (gr_line (start 60 50) (end 0 50) (stroke (width 0.1) (type default)) (layer "Edge.Cuts"))
  (gr_line (start 0 50) (end 0 0) (stroke (width 0.1) (type default)) (layer "Edge.Cuts"))
)"
`;

exports[`KiCad exporter snapshot tests > generateKicadProjectFile matches snapshot 1`] = `
"{
  "board": {
    "design_settings": {
      "defaults": {
        "board_outline_line_width": 0.1,
        "copper_line_width": 0.25,
        "copper_text_size_h": 1.5,
        "copper_text_size_v": 1.5,
        "copper_text_thickness": 0.3,
        "other_line_width": 0.15,
        "silk_line_width": 0.15,
        "silk_text_size_h": 1,
        "silk_text_size_v": 1,
        "silk_text_thickness": 0.15
      },
      "diff_pair_dimensions": [],
      "drc_exclusions": [],
      "rules": {
        "min_clearance": 0.2,
        "min_track_width": 0.2,
        "min_via_annular_width": 0.13,
        "min_via_diameter": 0.5
      },
      "track_widths": [
        0,
        0.25,
        0.5,
        1
      ],
      "via_dimensions": []
    }
  },
  "libraries": {
    "pinned_footprint_libs": [],
    "pinned_symbol_libs": []
  },
  "meta": {
    "filename": "KiCad_Snapshot_Circuit.kicad_pro",
    "version": 1
  },
  "net_settings": {
    "classes": [
      {
        "bus_width": 12,
        "clearance": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "diff_pair_width": 0.2,
        "line_style": 0,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "name": "Default",
        "pcb_color": "rgba(0, 0, 0, 0.000)",
        "schematic_color": "rgba(0, 0, 0, 0.000)",
        "track_width": 0.25,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "wire_width": 6
      }
    ],
    "meta": {
      "version": 3
    },
    "net_colors": null,
    "netclass_assignments": null,
    "netclass_patterns": []
  },
  "pcbnew": {
    "last_paths": {
      "gencad": "",
      "idf": "",
      "netlist": "",
      "specctra_dsn": "",
      "step": "",
      "vrml": ""
    },
    "page_layout_descr_file": ""
  },
  "schematic": {
    "drawing": {
      "default_bus_thickness": 12,
      "default_line_thickness": 6,
      "default_text_size": 50,
      "default_wire_thickness": 6
    },
    "legacy_lib_dir": "",
    "legacy_lib_list": []
  },
  "sheets": [
    [
      "",
      ""
    ]
  ],
  "text_variables": {}
}"
`;

exports[`KiCad exporter snapshot tests > generateKicadSchematic matches snapshot 1`] = `
"(kicad_sch (version 20230121) (generator "ProtoPulse")
  (uuid "fb69b604-6ca9-c22c-992e-ba9cb74c702c")
  (paper "A3")

  (title_block
    (title "KiCad Snapshot Circuit")
    (comment 1 "Generated by ProtoPulse EDA")
    (comment 2 "https://protopulse.io")
  )

  (lib_symbols
    (symbol "PP:ATmega328P_1" (pin_names (offset 0.254)) (in_bom yes) (on_board yes)
      (property "Reference" "U" (at 0 4.54 0) (effects (font (size 1.27 1.27))))
      (property "Value" "ATmega328P" (at 0 -4.54 0) (effects (font (size 1.27 1.27))))
      (property "Footprint" "DIP-28" (at 0 -6.54 0) (effects (font (size 1.27 1.27)) hide))
      (property "Datasheet" "" (at 0 -8.54 0) (effects (font (size 1.27 1.27)) hide))
      (symbol "PP:ATmega328P_1_0_1"
        (rectangle (start -2.54 2.54) (end 2.54 -2.54) (stroke (width 0) (type default)) (fill (type background)))
      )
      (symbol "PP:ATmega328P_1_1_1"
        (pin unspecified line (at -5.08 1.27 0) (length 2.54) (name "RESET" (effects (font (size 1.27 1.27)))) (number "pin1" (effects (font (size 1.27 1.27)))))
        (pin power_in line (at -5.08 -1.27 0) (length 2.54) (name "VCC" (effects (font (size 1.27 1.27)))) (number "pin2" (effects (font (size 1.27 1.27)))))
        (pin power_in line (at 5.08 0 180) (length 2.54) (name "GND" (effects (font (size 1.27 1.27)))) (number "pin3" (effects (font (size 1.27 1.27)))))
      )
    )
  )

  (symbol (lib_id "PP:ATmega328P_1") (at 10 20 0)
    (uuid "216c306d-6ca9-c22c-992e-ba9cb74c702c")
    (property "Reference" "U1" (at 10 22 0) (effects (font (size 1.27 1.27))))
    (property "Value" "ATmega328P" (at 10 18 0) (effects (font (size 1.27 1.27))))
    (property "Footprint" "DIP-28" (at 10 16 0) (effects (font (size 1.27 1.27)) hide))
    (instances
      (project "KiCad Snapshot Circuit"
        (path "/216c306d-6ca9-c22c-992e-ba9cb74c702c" (reference "U1") (unit 1))
      )
    )
  )

  (sheet_instances
    (path "/" (page "1"))
  )
)"
`;

exports[`Netlist generator snapshot tests > generateCsvNetlist matches snapshot 1`] = `
"Net Name,Net Type,From RefDes,From Pin,To RefDes,To Pin
VCC,power,R1,PIN1,C1,PIN1
GND,ground,R1,PIN2,C1,PIN2"
`;

exports[`Netlist generator snapshot tests > generateKicadNetlist matches snapshot 1`] = `
"(export (version "E")
  (design
    (source "Snapshot Test Circuit")
    (tool "ProtoPulse EDA")
  )
  (components
    (comp (ref "R1")
      (value "10K")
    )
    (comp (ref "C1")
      (value "100nF")
    )
  )
  (nets
    (net (code "0") (name ""))
    (net (code "1") (name "VCC")
      (node (ref "R1") (pin "pin1") (pinfunction "PIN1"))
      (node (ref "C1") (pin "pin1") (pinfunction "PIN1"))
    )
    (net (code "2") (name "GND")
      (node (ref "R1") (pin "pin2") (pinfunction "PIN2"))
      (node (ref "C1") (pin "pin2") (pinfunction "PIN2"))
    )
  )
)"
`;

exports[`Netlist generator snapshot tests > generateNetlist — csv format matches snapshot 1`] = `
"Net Name,Net Type,From RefDes,From Pin,To RefDes,To Pin
VCC,power,R1,PIN1,C1,PIN1
GND,ground,R1,PIN2,C1,PIN2"
`;

exports[`Netlist generator snapshot tests > generateNetlist — kicad format matches snapshot 1`] = `
"(export (version "E")
  (design
    (source "Snapshot Test Circuit")
    (tool "ProtoPulse EDA")
  )
  (components
    (comp (ref "R1")
      (value "10K")
    )
    (comp (ref "C1")
      (value "100nF")
    )
  )
  (nets
    (net (code "0") (name ""))
    (net (code "1") (name "VCC")
      (node (ref "R1") (pin "pin1") (pinfunction "PIN1"))
      (node (ref "C1") (pin "pin1") (pinfunction "PIN1"))
    )
    (net (code "2") (name "GND")
      (node (ref "R1") (pin "pin2") (pinfunction "PIN2"))
      (node (ref "C1") (pin "pin2") (pinfunction "PIN2"))
    )
  )
)"
`;

exports[`Netlist generator snapshot tests > generateNetlist — spice format matches snapshot 1`] = `
"* SPICE Netlist — Snapshot Test Circuit
* Generated by ProtoPulse

R1 VCC 0 10K
C1 VCC 0 100nF

.end"
`;

exports[`Netlist generator snapshot tests > generateSpiceNetlist matches snapshot 1`] = `
"* SPICE Netlist — Snapshot Test Circuit
* Generated by ProtoPulse

R1 VCC 0 10K
C1 VCC 0 100nF

.end"
`;

exports[`SPICE exporter snapshot tests > exportSpiceNetlist — AC analysis matches snapshot 1`] = `
"* Snapshot SPICE Circuit
* Generated by ProtoPulse — [TIMESTAMP]

* Node mapping:
*   0 = GND
*   1 = VCC

* Components
R1 1 0 10K
C1 1 0 100n

* Analysis
.AC DEC 100 1.000 1.000MEG

.CONTROL
run
plot all
.ENDC

.END"
`;

exports[`SPICE exporter snapshot tests > exportSpiceNetlist — RC circuit with operating point matches snapshot 1`] = `
"* Snapshot SPICE Circuit
* Generated by ProtoPulse — [TIMESTAMP]

* Node mapping:
*   0 = GND
*   1 = VCC

* Components
R1 1 0 10K
C1 1 0 100n

* Analysis
.OP

.CONTROL
run
print all
.ENDC

.END"
`;

exports[`SPICE exporter snapshot tests > exportSpiceNetlist — RC circuit with operating point matches snapshot 2`] = `"snapshot_spice_circuit.cir"`;

exports[`SPICE exporter snapshot tests > exportSpiceNetlist — transient analysis matches snapshot 1`] = `
"* Snapshot SPICE Circuit
* Generated by ProtoPulse — [TIMESTAMP]

* Node mapping:
*   0 = GND
*   1 = VCC

* Components
R1 1 0 10K
C1 1 0 100n

* Analysis
.TRAN 1.000U 1.000M

.CONTROL
run
plot all
.ENDC

.END"
`;
